--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,5 +13,8 @@
   <a mat-menu-item [routerLink]="['expenses']" (click)="setTitle('expenses')"
     >expenses</a
   >
+  <a mat-menu-item [routerLink]="['generator']" (click)="setTitle('generator')"
+    >generator</a
+  >
 </mat-menu>
 <router-outlet></router-outlet>
