--- a/src/app/report/generator/generator.component.html
+++ b/src/app/report/generator/generator.component.html
@@ -119,6 +119,11 @@
           Save Report
         </button>
       </div>
+      <div style="text-align: center" *ngIf="generated">
+        <button mat-raised-button type="submit" (click)="viewPdf()">
+          View PDF
+        </button>
+      </div>
     </form>
   </mat-card-content>
 </mat-card>
