Added Pdf Info Viewer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,5 +16,8 @@
   <a mat-menu-item [routerLink]="['generator']" (click)="setTitle('generator')"
     >generator</a
   >
+  <a mat-menu-item [routerLink]="['viewer']" (click)="setTitle('viewer')"
+    >viewer</a
+  >
 </mat-menu>
 <router-outlet></router-outlet>
